# Event_Bus_x_Actix_x_Rabbitmq_x_Sqlx

./: .gitignore  Cargo.toml  Readme.md
examples/: complete_driving_scenario.rs
src/: lib.rs  main.rs
src/common/: error.rs
src/config/: mod.rs  rabbitmq.rs  sqlite.rs
src/core/: can.rs  mod.rs  stream.rs  websocket.rs
src/features/: mod.rs
src/features/can/: controller.rs  mod.rs  model.rs  service.rs
src/features/driving_step/: controller.rs  mod.rs  model.rs  service.rs
src/features/event/: controller.rs  mod.rs  model.rs  service.rs
