[package]
name = "canbus_rmq_realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4"
actix-web-actors = "4"
actix-web-lab = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
lapin = "3.2"
anyhow = "1.0.99"
async-stream = "0.3.6"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "2.0.1"
env_logger = "0.11"
